--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "index"
+authors: "Kyle, Santiago"
 format: html
 editor: visual
 ---
@@ -24,3 +25,44 @@ You can add options to executable code like this
 ```
 
 The `echo: false` option disables the printing of code (only output is displayed).
+
+```{r}
+library(tidyverse)
+library(readxl)
+data <- read_excel('/Users/santiagorodriguez/Desktop/Intro to data science/assignment04/Data/journalists_Sep22.xlsx')
+
+#how to make it collaborative and not on my desktop
+```
+
+# Assignment 04: Data Visualization, Quarto, and Git
+
+## Visualization #1: count of events by event type
+```{r}
+data%>%
+  ggplot() +
+  geom_bar(mapping = aes(y = EVENT_TYPE))
+```
+### Interpretation:
+The graph shows the number of events recorded in the dataset by event type. Protests are the most common event, with around 10000 events recorded, followed by violence against civilians, with over 2500 events recorded.  
+
+## Visualization #2: Fatalities by Region
+```{r}
+data%>%
+  ggplot() +
+  geom_point(mapping = aes(x=FATALITIES, y = REGION), color = "red", alpha = 0.1)
+```
+
+### Interpretation:
+The graph illustrates the number of fatalities in reported events per region. The majority of events are low-fatality.
+
+## Visualization #3
+
+### Interpretation:
+
+The graph shows...
+
+## Visualization #4
+
+### Interpretation:
+
+The graph shows...
